--- a/style/style.css
+++ b/style/style.css
@@ -68,6 +68,7 @@ a {
   text-decoration: none;
   margin-right: 20px;
   color: #555;
+  font-size: 12px;
 }
 
 p {
@@ -151,7 +152,7 @@ li {
 }
 
 .small-container {
-  max-width: 1080px;
+  max-width: 1140px;
   margin: auto;
   padding-left: 25px;
   padding-right: 25px;
@@ -479,7 +480,6 @@ td input {
 
 td a {
   color: #ff523b;
-  font-size: 12px;
 }
 
 td img {
@@ -575,10 +575,6 @@ form.btn:focus {
   left: 0;
 }
 
-form a {
-  font-size: 12px;
-}
-
 #Indicator {
   width: 100px;
   border: none;
@@ -602,9 +598,20 @@ form a {
   margin-bottom: 1rem;
 }
 
+.view-more-a {
+  margin: 0;
+}
+
 .footer-a {
   margin: 0;
   color: inherit;
+}
+
+.aligin-end {
+  text-align: end;
+}
+.margin-bottom-none {
+  margin-bottom: 0;
 }
 /* --- media query --- */
 
@@ -675,5 +682,8 @@ form a {
   }
   .cart-info p {
     display: none;
+  }
+  .aligin-end {
+    text-align: center;
   }
 }
