write media queries for .container-image class

--- a/style/style.css
+++ b/style/style.css
@@ -655,6 +655,9 @@ form.btn:focus {
   .cart-info p {
     display: none;
   }
+  .aligin-end {
+    text-align: center;
+  }
 }
 
 @media only screen and (max-width: 600px) {
@@ -685,5 +688,8 @@ form.btn:focus {
   }
   .aligin-end {
     text-align: center;
+  }
+  .container-image {
+    width: 26rem;
   }
 }
